--- a/src/style/style.module.css
+++ b/src/style/style.module.css
@@ -1,8 +1,12 @@
 .RangeField {
+  width: 500px;
+  height: 50px;
   background-color: rgb(200, 200, 250);
 }
 
 .RangeDial {
+  width: 50px;
+  height: 50px;
   background-color: rgb(100, 100, 250);
 }
 
