--- a/src/style/style.module.css
+++ b/src/style/style.module.css
@@ -2,9 +2,14 @@
   width: 500px;
   height: 50px;
   background-color: rgb(200, 200, 250);
+
+  position: relative;
 }
 
 .RangeDial {
+  position: absolute;
+  top: 0;
+
   width: 50px;
   height: 50px;
   background-color: rgb(100, 100, 250);
